Add upload avatar
Refactor register handler

--- a/public_html/doctor-profile.html
+++ b/public_html/doctor-profile.html
@@ -1,5 +1,6 @@
 <h1>WELCOME</h1>
 <h1>{{ .Name }}</h1>
-<p>{{ .Phone }}</p>
-<p>{{ .Number }}</p>
-<p>{{ .Experience }}</p>
+<p>{{ .Phone }} شماره مطب</p>
+<p>{{ .Number }}شماره نظام پزشکی</p>
+<p>{{ .Experience }} تجربه به سال</p>
+<p>{{ .Address }} آدرس مطب</p>
