--- a/public_html/register.html
+++ b/public_html/register.html
@@ -19,11 +19,11 @@
             </div>
         </div>
         <div class = "col-66 white-alt-bg max-height center-center">
-            <form class ="col-50 text-center">
+            <form class ="col-50 text-center" action = "/register" method="POST">
                 <p class = "f-bold fade-black bottom-offset-lot">برای ثبت نام اطلاعات خود را وارد کنید.</p>
-                <input name= "username" type="text" class = "row-flex bottom-offset-more" name="phone" placeholder="نام کاربری" required>
-                <input name= "phone" type="text" class = "row-flex bottom-offset-more" name="phone" placeholder="شماره تلفن" required>
-                <input name = "password" type="password" class = "row-flex bottom-offset-more" name="phone" placeholder="رمز عبور" required minlength="8">
+                <input name= "username" type="text" class = "row-flex bottom-offset-more" placeholder="نام کاربری" required>
+                <input name= "phone" type="text" class = "row-flex bottom-offset-more" placeholder="شماره تلفن" required>
+                <input name = "password" type="password" class = "row-flex bottom-offset-more" placeholder="رمز عبور" required minlength="8">
                 
                 <button type="submit" class = "row-flex btn-base btn-orange bottom-offset">
                     <p class = "wide text-center f-18">
