--- a/public_html/doctor-login.html
+++ b/public_html/doctor-login.html
@@ -19,7 +19,7 @@
             </div>
         </div>
         <div class = "col-66 white-alt-bg max-height center-center">
-            <form class ="col-50 text-center">
+            <form class ="col-50 text-center" action="/login" method="POST">
                 <p class = "f-bold fade-black bottom-offset-lot">برای ورود اطلاعات خود را وارد کنید.</p>
                 <input type="text" class = "row-flex bottom-offset-more" name="number" placeholder="شماره نظام پزشکی" required>
                 <input type="password" class = "row-flex bottom-offset-more" name="password" placeholder="رمز عبور" required minlength="8">
