--- a/public_html/doctors-personal-page.html
+++ b/public_html/doctors-personal-page.html
@@ -35,7 +35,7 @@
                         </li>
                         <li class="nav-item"><a href="#home"><i class="fa fa-wifi"></i> مشاوره آنلاین</a></li>
                         <li class="nav-item"><a href="#home"><i class="fa fa-book"></i> مجله پزشکی</a></li>
-                        <li class="nav-item"><a href="#home"><i class="fa fa-user-md"></i> عضویت پزشکان</a></li>
+                        <li class="nav-item"><a href="doctor-register.html"><i class="fa fa-user-md"></i> عضویت پزشکان</a></li>
                         <li class="nav-item"><a href="#home"><i class="fa fa-cube"></i> کرونا سازمانی</a></li>
                         <li class="nav-item left-nav rounded"><a href="login.html">ورود <i
                                     class="fa fa-sign-in-alt fa-flip-horizontal"></i></a></li>
@@ -810,7 +810,7 @@
                 this.doctors.spec = this.specIdMapper(response.data.specid)
                 s.innerHTML = this.doctors.spec;
                 slink.setAttribute("href", "doctors-list.html?spec=" + response.data.specid)
-                document.title = "صفحه دکتر" + response.data.name;
+                document.title = " صفحه دکتر" + response.data.name;
                 n.innerHTML = response.data.name;
                 }
                 ).catch((err) => console.error(err));
