--- a/public_html/medical-specialties.html
+++ b/public_html/medical-specialties.html
@@ -37,7 +37,7 @@
                         </li>
                         <li class="nav-item"><a href="#home"><i class="fa fa-wifi"></i> مشاوره آنلاین</a></li>
                         <li class="nav-item"><a href="#home"><i class="fa fa-book"></i> مجله پزشکی</a></li>
-                        <li class="nav-item"><a href="#home"><i class="fa fa-user-md"></i> عضویت پزشکان</a></li>
+                        <li class="nav-item"><a href="doctor-register.html"><i class="fa fa-user-md"></i> عضویت پزشکان</a></li>
                         <li class="nav-item"><a href="#home"><i class="fa fa-cube"></i> کرونا سازمانی</a></li>
                         <li class="nav-item left-nav rounded"><a href="login.html">ورود <i
                                     class="fa fa-sign-in-alt fa-flip-horizontal"></i></a></li>
@@ -252,7 +252,7 @@
                             <div class="card-body">
                                 <div class="row-flex bottom-offset-more">
                                     <img class="rounded fourside-padding-5 left-offset" src="images/spec/nose.svg">
-                                    <a href="doctors-list.html" class = "no-decoration vertical-center" style="color: black">
+                                    <a href="doctors-list.html?spec=2" class = "no-decoration vertical-center" style="color: black">
                                         <h5 class="vertical-center">گوش، حلق و بینی</h5>
                                     </a>
                                 </div>
@@ -268,7 +268,7 @@
                                         <p class = " f-16"> + ۱۰ دکتر</p>
                                     </div>
                                     <div class="col-50">
-                                        <a href="doctors-list.html"
+                                        <a href="doctors-list.html?spec=2"
                                             class="btn btn-primary-orange w-100 fourside-padding-5 padding-btn-top-bottom">مشاهده
                                             <i class="fas fa-arrow-left icon-line-align"></i></a>
                                     </div>
@@ -282,7 +282,7 @@
                                 <div class="row-flex bottom-offset-more">
                                     <img class="rounded fourside-padding-5 left-offset-more"
                                         src="images/spec/brain.svg">
-                                        <a href="doctors-list.html" class = "no-decoration vertical-center" style="color: black">
+                                        <a href="doctors-list.html?spec=1" class = "no-decoration vertical-center" style="color: black">
                                             <h5>مغز و اعصاب</h5>
 
                                         </a>
@@ -297,7 +297,7 @@
                                         <p class = " f-16"> + ۱۳ دکتر</p>
                                     </div>
                                     <div class="col-50">
-                                        <a href="doctors-list.html"
+                                        <a href="doctors-list.html?spec=1"
                                             class="btn btn-primary-orange w-100 fourside-padding-5 padding-btn-top-bottom">مشاهده
                                             <i class="fas fa-arrow-left icon-line-align"></i></a>
                                     </div>
@@ -378,7 +378,7 @@
                                 <div class="row-flex bottom-offset-more">
                                     <img class="rounded fourside-padding-5 left-offset-more" src="images/spec/hair.svg">
                                     <h5 class="vertical-center">
-                                        <a href="doctors-list.html" class = "no-decoration vertical-center" style="color: black">
+                                        <a href="doctors-list.html?spec=5" class = "no-decoration vertical-center" style="color: black">
                                         
                                         پوست و مو
                                         </a>
@@ -394,7 +394,7 @@
                                         <p class = " f-16"> + ۲۰ دکتر</p>
                                     </div>
                                     <div class="col-50">
-                                        <a href="doctors-list.html"
+                                        <a href="doctors-list.html?spec=5"
                                             class="btn btn-primary-orange w-100 fourside-padding-5 padding-btn-top-bottom">مشاهده
                                             <i class="fas fa-arrow-left icon-line-align"></i></a>
                                     </div>
@@ -411,7 +411,7 @@
                                     <img class="rounded fourside-padding-5 " src="images/spec/knife.svg">
                                     <h6 class="vertical-center f-bold f-18">
                                         <a href="doctors-list.html" class = "no-decoration vertical-center" style="color: black">
-                                        جراحی مغز و اعصاب
+                                        جراحی مغز
                                         </a>
                                     </h6>
                                 </div>
@@ -631,7 +631,7 @@
                                     <img class="rounded fourside-padding-5 left-offset-more"
                                         src="images/spec/feetus.svg">
                                     <h5 class="vertical-center">
-                                        <a href="doctors-list.html" class = "no-decoration vertical-center" style="color: black">
+                                        <a href="doctors-list.html?spec=4" class = "no-decoration vertical-center" style="color: black">
 
                                         زنان و زایمان
                                         </a>
@@ -649,7 +649,7 @@
                                         <p class = " f-16"> + ۱۳ دکتر</p>
                                     </div>
                                     <div class="col-50">
-                                        <a href="doctors-list.html"
+                                        <a href="doctors-list.html?spec=4"
                                             class="btn btn-primary-orange w-100 fourside-padding-5 padding-btn-top-bottom">مشاهده
                                             <i class="fas fa-arrow-left icon-line-align"></i></a>
                                     </div>
