Fix minor front issues

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -204,7 +204,7 @@
                 <div class = "col-50 sides-margin-med">
                     <img class = "service-img bottom-offset-more" src="images/services1.png" alt="">
                     <p class = "text-center white-text f-bold bottom-offset">تست PCR و آنتی بادی در محل</p>
-                    <p class = "white-text bottom-offset"> اگر در شهرهای تهران، مشهد، اصفهان، کرج هستید، می‌توانید بدون مراجعه به آزمایشگاه و در محل مدنظر خود آزمایش کرونا بدهید.</p>
+                    <p class = "white-text bottom-offset just-content"> اگر در شهرهای تهران، مشهد، اصفهان، کرج هستید، می‌توانید بدون مراجعه به آزمایشگاه و در محل مدنظر خود آزمایش کرونا بدهید.</p>
                     <button class = "services-btn bottom-offset top-offset">
                         <a href="">
                             <p class = "f-18">درخواست آزمایش <i class="fas fa-arrow-left"></i></p>
@@ -214,7 +214,7 @@
                 <div class = "col-50 sides-margin-med">
                     <img class = "service-img bottom-offset-more" src="images/services2.png" alt="">
                     <p class = "text-center white-text f-bold bottom-offset">مشاوره آنلاین کرونا</p>
-                    <p class = "white-text bottom-offset">با تست آنلاین کرونا علائم خود را بررسی کنید و اگر مشکوک بودید میتوانید به صورت فوری با پزشکان عمومی مشاوره آنلاین داشته باشید.</p>
+                    <p class = "white-text bottom-offset just-content">با تست آنلاین کرونا علائم خود را بررسی کنید و اگر مشکوک بودید میتوانید به صورت فوری با پزشکان عمومی مشاوره آنلاین داشته باشید.</p>
                     <button class = "services-btn bottom-offset top-offset">
                         <a href="">
                             <p class = "f-18">دریافت مشاوره کرونا <i class="fas fa-arrow-left"></i></p>
