--- a/public_html/medical-specialties.html
+++ b/public_html/medical-specialties.html
@@ -229,7 +229,7 @@
                                 </div>
                                 <p class="f-16 card-text">
                                     متخصص گوارش، کبد و آندوسکوپی پزشکی که بر سلامت گوارش تمرکز دارد و در زمینه تشخیص،
-                                    ارزیابی و درمان ...
+                                     و درمان ...
                                 </p>
                                 <div class="row-flex">
                                     <div id="doctors-profile-pic" class="col-50">
@@ -321,7 +321,7 @@
                                 </div>
                                 <p class="f-16 card-text">
                                     متخصص گوارش، کبد و آندوسکوپی پزشکی که بر سلامت گوارش تمرکز دارد و در زمینه تشخیص،
-                                    ارزیابی و درمان ...
+                                     و درمان ...
                                 </p>
                                 <div class="row-flex">
                                     <div id="doctors-profile-pic" class="col-50">
@@ -417,7 +417,7 @@
                                 </div>
                                 <p class="f-16 card-text">
                                     متخصص گوارش، کبد و آندوسکوپی پزشکی که بر سلامت گوارش تمرکز دارد و در زمینه تشخیص،
-                                    ارزیابی و درمان ...
+                                     و درمان ...
                                 </p>
                                 <div class="row-flex">
                                     <div id="doctors-profile-pic" class="col-50">
@@ -514,7 +514,7 @@
                                 </div>
                                 <p class="f-16 card-text">
                                     متخصص گوارش، کبد و آندوسکوپی پزشکی که بر سلامت گوارش تمرکز دارد و در زمینه تشخیص،
-                                    ارزیابی و درمان ...
+                                     و درمان ...
                                 </p>
                                 <div class="row-flex">
                                     <div id="doctors-profile-pic" class="col-50">
@@ -606,7 +606,7 @@
                                 </div>
                                 <p class="f-16 card-text">
                                     متخصص گوارش، کبد و آندوسکوپی پزشکی که بر سلامت گوارش تمرکز دارد و در زمینه تشخیص،
-                                    ارزیابی و درمان ...
+                                     و درمان ...
                                 </p>
                                 <div class="row-flex">
                                     <div id="doctors-profile-pic" class="col-50">
